# desafio_01_engenharia

./: README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: pipeline.py
include/controllers/: controller.py
include/database/: db.py  db_models.py
include/schemas/: schema.py
